Safari365 Prod/src/objects/ODT__c.object
<CustomObject>
    <fields>
        <fullName>EX1__c</fullName>
        <label>EX1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX2__c</fullName>
        <label>EX2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX3__c</fullName>
        <label>EX3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT__c</fullName>
        <label>OPT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSR_id__c</fullName>
        <externalId>true</externalId>
        <label>OSR_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QR__c</fullName>
        <label>QR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS__c</fullName>
        <label>SS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX__c</fullName>
        <label>TAX</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR__c</fullName>
        <label>TR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW__c</fullName>
        <label>TW</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>ODT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OPT__c</columns>
        <columns>OSR_id__c</columns>
        <columns>SS__c</columns>
        <columns>TR__c</columns>
        <columns>TW__c</columns>
        <columns>QR__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ODT-{0000000}</displayFormat>
        <label>ODT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ODTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>